# path-finder

./: .gitignore  .pre-commit-config.yaml  .racket-fmt.json  BOOTSTRAP-PRIMITIVES-COMPLETE.md  CLAUDE.md  COMPUTATION-AS-EFFECT-ACHIEVEMENT.md  CONTRIBUTING.md  DEVELOPMENT.md  IR-IMPLEMENTATION-STATUS.md  LICENSE  METACIRCULAR-BOOTSTRAP.md  METACIRCULAR-COMPILER-STATUS.md  MLIR-PLAN.md  MLIR-RUNTIME-COMPILE-TIME.md  Makefile  PROJECT-STATUS.md  PURE-HOTT-EFFECTS-ACHIEVEMENT.md  README.md  SELF-COMPILATION-TEST-RESULTS.md  SELF-HOSTING-REPORT.md  SELF-HOSTING-STATUS.md  VALIDATION-SUMMARY.md  bootstrap-plan.md  conversion-summary.md  debug-builtin-env.rkt  debug-zero-check.rkt  devbox.json  hott-effects-concerns.md  info.rkt  mathematical-foundations.hott  mathematical-hott.hott  nat-to-string-analysis.md  package.json  prd.md  pure-hott-analysis.md  pure-hott-test.hott  simple-math.hott  sorry-reconciliation.md  sorry-tracker.md  test-builtins.hott  (+11 more)
.taskmaster/: config.json
docs/: pure-hott-cache-system.md  values-as-proofs.md
examples/: compile-vm.sexp  computation-as-effect-demo.sexp  demo-ir-pipeline.sexp  demo-mlir-compile-time.sexp  demo-self-compile.sexp  dependent-safety-demo.rkt  effect-types-demo.rkt  generic-effects-demo.rkt.old  hott-cache-demo.rkt  inherent-composability-demo.rkt  multi-context-effects-demo.rkt.old  (+23 more)
rust-host/: Cargo.toml
rust-host/src/: bootstrap_vm.rs  effect_bridge.rs  hott_eliminators.rs  hott_evaluator.rs  hott_loader.rs  hott_parser.rs  hott_values.rs  initial_env.rs  lib.rs  main.rs  sexp_parser.rs  univalent_vm.rs  v1_vm.rs
(+239 files in other folders)
