[package]
name = "pathfinder-rust-host"
version = "0.1.0"
edition = "2021"
description = "PathFinder HoTT System - Rust VM for pure HoTT mathematical operations"
authors = ["PathFinder Team"]
license = "MIT"

[dependencies]
# Core dependencies for HoTT implementation
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
thiserror = "1.0"

# For procedural macros (HoTT DSL)
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }

# Performance and utilities
dashmap = "5.4"  # Concurrent hashmap for caching
rayon = "1.7"    # Parallel processing for tier execution
clap = { version = "4.0", features = ["derive"] }  # CLI
tokio = { version = "1.0", features = ["full"] }   # Async runtime

[lib]
name = "pathfinder_rust_host"
path = "src/lib.rs"

[[bin]]
name = "pathfinder"
path = "src/main.rs"

[[bin]]
name = "test_tokenizer"
path = "src/bin/test_tokenizer.rs"

[dev-dependencies]
criterion = "0.5"  # Benchmarking